# computer-use-mcp

./: .env.example  .gitignore  LICENSE  README.md  install.py  pyproject.toml  server.json
src/: config.py  input.py  safety.py  screen.py  server.py
src/realhands/: __init__.py  config.py  input.py  safety.py  screen.py  server.py
